# adogslife_game

./: README.MD  main.py  pyproject.toml
concept/: concept.MD
game/: constants.py  game.py  settings.py
game/core/: base_objects.py  base_sprite.py
game/frames/: test_frame.py
game/game_objects/: animals.py  peoples.py
